# llm-team-orchestrator

./: .env.example  .gitignore  .mcp.json  CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  INC-2026-0407-001-report.md  INC-2026-0407-001_FINAL_REPORT.md  INCIDENT-2026-0407-001.md  INCIDENT-REPORT-2026-04-07.md  INCIDENT-REPORT-2026-0407-001.md  LICENSE  MVP-PLAN.md  README.md  VERIFICATION-REPORT.md  pyproject.toml  team-config.yaml
.claude/: settings.json
.claude/skills/: implement.md  python-conventions.md  qa-verification.md  review.md  spec-compliance.md  test.md  testing-patterns.md
.github/workflows/: ci.yml
docs/: DESIGN-E2E-TEST.md  DESIGN-e2e-test.md  INC-2026-0407-001-postmortem.md  SPEC.md  api-spec.md  architecture.md  chaos-engineering.md  cicd.md  conventions.md  cross-reference.md  data-models.md  dependencies.md  deployment.md  dry-run.md  errors.md  file-structure.md  functions.md  presets-guide.md  security.md  testing.md  tooling.md  v2-iter20-cli-loose-coupling-spec.md  v2-iter21-spec.md  v2-iteration2-plan.md  v2-iteration3-plan.md  v2-plan.md  v2-spec.md  websocket-protocol.md  work-plan.md
docs/calculator/: DESIGN.md
docs/designs/: PLAYWRIGHT-E2E-SUBMIT-TEST.md
examples/: simple_pipeline.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts  utils.ts
frontend/src/components/: AgentStatusPanel.test.tsx  AgentStatusPanel.tsx  ArtifactViewer.tsx  EventLog.test.tsx  EventLog.tsx  FileExplorer.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  LiveOutput.tsx  LiveOutputInline.tsx  PipelineDetail.tsx  PipelineList.test.tsx  PipelineList.tsx  ResultViewer.test.tsx  ResultViewer.tsx  SubtaskList.tsx  SubtaskResultViewer.tsx  TaskDetailModal.tsx  TaskSubmitForm.test.tsx  TaskSubmitForm.tsx  TeamPresetsPanel.tsx
frontend/src/contexts/: OutputEventsContext.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/lib/: streamParser.ts
frontend/src/types/: api.ts
presets/agents/: architect.yaml  ceo.yaml  data-analyst.yaml  deploy-operator.yaml  designer.yaml  doc-writer.yaml  elk-analyst.yaml  finance.yaml  git-operator.yaml  implementer.yaml  infra-engineer.yaml  istio-analyst.yaml  k8s-analyst.yaml  metrics-analyst.yaml  ops-lead.yaml  planner.yaml  reviewer.yaml  sales.yaml  security-auditor.yaml  slack-notifier.yaml  tester.yaml
presets/teams/: deploy-team.yaml  feature-team.yaml  incident-analysis-team.yaml  product-launch-team.yaml  review-team.yaml
scripts/: check_cli_availability.sh
src/: add.py
src/orchestrator/: __init__.py  __main__.py  cli.py  math_utils.py  utils.py
src/orchestrator/adapters/: base.py  claude.py  codex.py  factory.py  gemini.py
src/orchestrator/api/: __init__.py  app.py  deps.py  routes.py  ws.py
src/orchestrator/auth/: key_pool.py  provider.py
src/orchestrator/calculator/: __init__.py  errors.py  interfaces.py  models.py
src/orchestrator/config/: loader.py  schema.py
src/orchestrator/context/: artifact_store.py
src/orchestrator/core/: __init__.py  engine.py  file_extractor.py  quality_gate.py  utils.py
src/orchestrator/core/adapters/: __init__.py  base.py  claude.py  codex.py  factory.py  gemini.py
src/orchestrator/core/auth/: __init__.py  provider.py
src/orchestrator/core/config/: __init__.py  (+2 more)
src/orchestrator/errors/: circuit.py  exceptions.py  retry.py
src/orchestrator/events/: bus.py  tracker.py  types.py
src/orchestrator/executor/: base.py  cli_executor.py  mcp_executor.py  synthesizer.py
src/orchestrator/graph/: builder.py  nodes.py  state.py
src/orchestrator/hybrid/: __init__.py  orchestrator.py
src/orchestrator/models/: schemas.py
src/orchestrator/poc/: __init__.py  demo.py  mock_adapters.py
src/orchestrator/queue/: board.py  models.py  worker.py
src/orchestrator/web/: __init__.py  app.py  routes.py  ws.py
src/orchestrator/worktree/: collector.py  manager.py
tests/: conftest.py  test_add.py
tests/api/: conftest.py  test_health_endpoint.py  test_presets.py  test_subtask_api.py
tests/e2e/: conftest.py  test_coding_scenario.py  test_failure_scenario.py  test_incident_scenario.py  test_playwright_e2e.py  test_resume_scenario.py
tests/integration/: test_3cli_pipeline.py  test_adapters_real.py  test_add_integration.py  test_claude_adapter.py  test_math_utils_integration.py
tests/poc/: test_e2e_pipeline.py  test_e2e_usecase.py  test_hybrid_orchestrator.py  test_incident_team.py  test_kanban_e2e.py  test_worktree_pipeline.py  test_ws_e2e.py
tests/unit/: conftest.py  test_adapters.py  test_artifact_store.py  test_auth.py  test_claude_stream_json.py  test_cli_progress.py  test_collector.py  test_config.py  test_config_wiring.py  test_context_chaining.py  test_cwd_protection.py  test_errors.py  test_events.py  test_executor.py  test_factory.py  test_fallback.py  test_file_extractor.py  test_graph.py  test_hybrid_pipeline.py  test_key_pool.py  test_math_utils.py  test_mcp_isolation.py  test_models.py  test_partial_failure.py  test_planner.py  test_planner_llm.py  test_preset_models.py  test_registry.py  test_resume.py  test_retry.py  test_streaming.py  test_synthesizer.py  test_taskboard.py  test_tracker.py  test_utils.py  test_web.py  test_worker.py  test_worker_streaming.py  test_worktree.py  test_worktree_commit.py
tests/unit/core/: test_engine.py
tools/mcp-configs/: elk-analyst.mcp.json  istio-analyst.mcp.json  k8s-analyst.mcp.json  metrics-analyst.mcp.json
tools/mcp-servers/: elastic_mcp.py  figma_mcp.py  finance_mcp.py  grafana_mcp.py  istio_mcp.py  k8s_mcp.py  pm_mcp.py  sales_mcp.py
(+43 files in other folders)
