[project]
name = "orchestrator"
version = "0.2.0"
description = "Multi-LLM CLI team coding orchestrator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4",
    "litellm>=1.60",
    "pydantic>=2.10",
    "typer>=0.15",
    "structlog>=25.1",
    "tenacity>=9.0",
    "aiobreaker>=1.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "cryptography>=44.0",
    "pyyaml>=6.0",
]

[project.scripts]
orchestrator = "orchestrator.cli:app"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["langgraph.*", "litellm.*", "aiobreaker.*", "uvicorn.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring real CLI tools (deselect with '-m \"not integration\"')",
]
